chore: miscellaneous updates and final cleanup